--- a/framework-common/pom.xml
+++ b/framework-common/pom.xml
@@ -105,7 +105,7 @@
 					<transformers>
 						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>org.dbll.framework.App</mainClass>
+							<mainClass>com.dbll.framework.common.app.App</mainClass>
 						</transformer>
 					</transformers>
 				</configuration>
